# jolt-tla

./: .gitignore  ASSUMPTIONS.md  BadChain_Skip.cfg  BadChain_Splice.cfg  BadRegistry_ExternalHandle.cfg  Jolt.cfg  JoltContinuations.tla  README.md  SECURITY.md  WrapperValidation.cfg  flake.nix  spec.md
docs/: alignment.md  constants.json  invariants.md  module-reference.md
jolt-kernel/: Jolt.lean  KERNEL_SCOPE.md  README.md  Tests.lean  lake-manifest.json  lakefile.toml
jolt-oracle-rs/: Cargo.toml  Makefile  README.md  TODO.md  build.rs
jolt-oracle-rs/.cargo/: config.toml
jolt-oracle-rs/scripts/: check-error-coverage.sh  check-metadata-drift.sh  compare-replay-outputs.sh  run-corpus.sh  run-replay-tests.sh  setup-cross.sh
jolt-oracle-rs/src/: error.rs  lib.rs  main.rs  runner.rs
jolt-oracle-rs/src/conformance/: corpus.rs  harness.rs  mod.rs  repro.rs  runner.rs
jolt-oracle-rs/src/field/: fr.rs  mod.rs
jolt-oracle-rs/src/json/: jcs.rs  lexer.rs  limits.rs  mod.rs  parser.rs  types.rs
jolt-oracle-rs/src/poseidon/: mod.rs  permute.rs  sponge.rs
jolt-oracle-rs/src/state/: mod.rs  transcript.rs  types.rs  validation.rs
jolt-oracle-rs/tests/: cli_tests.rs  conformance.rs  corpus_conformance.rs  fr_conformance.rs  json_conformance.rs  lean_conformance.rs  poseidon_conformance.rs
jolt-oracle-rs/tests/fixtures/replay/: digest_large.json  digest_simple.json  digest_zero_state.json  verify_valid.json
jolt-tla/: CHANGELOG.md  CONTRIBUTING.md  Jolt.cfg  LICENSE  README.md  WrapperValidation.cfg  spec.md
jolt_kernel/: KERNEL_SCOPE.md  lakefile.toml
(+213 files in other folders)
